commit translated contents

--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.chartupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.chartupdatedata.yml
@@ -38,7 +38,7 @@ items:
           - 'excel!Excel.Interfaces.ChartAxesUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.ChartUpdateData#chartType:member'
     summary: |-
-      表示图表的类型。 有关详细信息，请参阅 ChartType。
+      指定图表的类型。 有关详细信息，请参阅 ChartType。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: chartType
@@ -83,7 +83,7 @@ items:
           - 'excel!Excel.Interfaces.ChartAreaFormatUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.ChartUpdateData#height:member'
     summary: |-
-      表示 chart 对象的高度，以磅值表示。
+      指定 chart 对象的高度（以磅为单位）。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: height
@@ -128,7 +128,7 @@ items:
           - 'excel!Excel.Interfaces.ChartLegendUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.ChartUpdateData#name:member'
     summary: |-
-      表示 chart 对象的名称。
+      指定 chart 对象的名称。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
@@ -143,7 +143,7 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.ChartUpdateData#showAllFieldButtons:member'
     summary: |-
-      表示是否在数据透视图上显示所有字段按钮。
+      指定是否在数据透视图上显示所有字段按钮。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showAllFieldButtons
@@ -158,7 +158,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartUpdateData#title:member'
     summary: |-
-      表示指定图表的标题，包括标题的文本、可见性、位置和格式。
+      指定指定图表的标题，包括文本、可见性、位置和标题的格式。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: title
@@ -173,7 +173,7 @@ items:
           - 'excel!Excel.Interfaces.ChartTitleUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.ChartUpdateData#top:member'
     summary: |-
-      表示从对象左边界至第 1 行顶部（在工作表上）或图表区域顶部（在图表上）的距离，以磅值表示。
+      指定从对象的上边缘到工作表上的第1行顶部或图表上的图表区顶部的距离（以磅为单位）。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: top
@@ -188,7 +188,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartUpdateData#width:member'
     summary: |-
-      表示 chart 对象的宽度，以磅值表示。
+      指定 chart 对象的宽度（以磅为单位）。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: width
