--- a/docs/docs-ref-autogen/excel_online/excel/excel.worksheetcollection.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.worksheetcollection.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.WorksheetCollection#add:member(1)'
@@ -34,6 +34,7 @@ items:
       - 'excel!Excel.WorksheetCollection#onDeactivated:member'
       - 'excel!Excel.WorksheetCollection#onDeleted:member'
       - 'excel!Excel.WorksheetCollection#onFormatChanged:member'
+      - 'excel!Excel.WorksheetCollection#onRowHiddenChanged:member'
       - 'excel!Excel.WorksheetCollection#onRowSorted:member'
       - 'excel!Excel.WorksheetCollection#onSelectionChanged:member'
       - 'excel!Excel.WorksheetCollection#onSingleClicked:member'
@@ -378,7 +379,7 @@ items:
         - id: propertyNamesAndPaths
           description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
           type:
-            - 'excel!OfficeExtension.LoadOption:interface'
+            - 'office!OfficeExtension.LoadOption:interface'
   - uid: 'excel!Excel.WorksheetCollection#onActivated:member'
     summary: |-
       当工作簿中的任何工作表激活时发生此事件。
@@ -544,6 +545,21 @@ items:
       return:
         type:
           - 'excel!Excel.WorksheetCollection#onFormatChanged~0:complex'
+  - uid: 'excel!Excel.WorksheetCollection#onRowHiddenChanged:member'
+    summary: |-
+      在特定工作表上的一个或多个行的隐藏状态更改时发生。
+
+      \[[API 集： ExcelApi 1.11](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: onRowHiddenChanged
+    fullName: onRowHiddenChanged
+    langs:
+      - typeScript
+    type: event
+    syntax:
+      content: 'readonly onRowHiddenChanged: OfficeExtension.EventHandlers<Excel.WorksheetRowHiddenChangedEventArgs>;'
+      return:
+        type:
+          - 'excel!Excel.WorksheetCollection#onRowHiddenChanged~0:complex'
   - uid: 'excel!Excel.WorksheetCollection#onRowSorted:member'
     summary: |-
       在已对一个或多个行进行排序时发生。 这是从上到下排序操作的结果。
@@ -603,7 +619,7 @@ items:
           - 'excel!Excel.Interfaces.WorksheetCollectionData:interface'
         description: ''
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.Worksheet:class'
     name: Excel.Worksheet
@@ -613,7 +629,7 @@ references:
     name: OfficeExtension.ClientResult<number>
     fullName: OfficeExtension.ClientResult<number>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.ClientResult:class'
+      - uid: 'office!OfficeExtension.ClientResult:class'
         name: OfficeExtension.ClientResult
         fullName: OfficeExtension.ClientResult
       - name: <number>
@@ -641,13 +657,13 @@ references:
       - uid: 'excel!Excel.Interfaces.CollectionLoadOptions:interface'
         name: Excel.Interfaces.CollectionLoadOptions
         fullName: Excel.Interfaces.CollectionLoadOptions
-  - uid: 'excel!OfficeExtension.LoadOption:interface'
+  - uid: 'office!OfficeExtension.LoadOption:interface'
     name: OfficeExtension.LoadOption
   - uid: 'excel!Excel.WorksheetCollection#onActivated~0:complex'
     name: OfficeExtension.EventHandlers<Excel.WorksheetActivatedEventArgs>
     fullName: OfficeExtension.EventHandlers<Excel.WorksheetActivatedEventArgs>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.EventHandlers:class'
+      - uid: 'office!OfficeExtension.EventHandlers:class'
         name: OfficeExtension.EventHandlers
         fullName: OfficeExtension.EventHandlers
       - name: <
@@ -661,7 +677,7 @@ references:
     name: OfficeExtension.EventHandlers<Excel.WorksheetAddedEventArgs>
     fullName: OfficeExtension.EventHandlers<Excel.WorksheetAddedEventArgs>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.EventHandlers:class'
+      - uid: 'office!OfficeExtension.EventHandlers:class'
         name: OfficeExtension.EventHandlers
         fullName: OfficeExtension.EventHandlers
       - name: <
@@ -675,7 +691,7 @@ references:
     name: OfficeExtension.EventHandlers<Excel.WorksheetCalculatedEventArgs>
     fullName: OfficeExtension.EventHandlers<Excel.WorksheetCalculatedEventArgs>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.EventHandlers:class'
+      - uid: 'office!OfficeExtension.EventHandlers:class'
         name: OfficeExtension.EventHandlers
         fullName: OfficeExtension.EventHandlers
       - name: <
@@ -689,7 +705,7 @@ references:
     name: OfficeExtension.EventHandlers<Excel.WorksheetChangedEventArgs>
     fullName: OfficeExtension.EventHandlers<Excel.WorksheetChangedEventArgs>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.EventHandlers:class'
+      - uid: 'office!OfficeExtension.EventHandlers:class'
         name: OfficeExtension.EventHandlers
         fullName: OfficeExtension.EventHandlers
       - name: <
@@ -703,7 +719,7 @@ references:
     name: OfficeExtension.EventHandlers<Excel.WorksheetColumnSortedEventArgs>
     fullName: OfficeExtension.EventHandlers<Excel.WorksheetColumnSortedEventArgs>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.EventHandlers:class'
+      - uid: 'office!OfficeExtension.EventHandlers:class'
         name: OfficeExtension.EventHandlers
         fullName: OfficeExtension.EventHandlers
       - name: <
@@ -717,7 +733,7 @@ references:
     name: OfficeExtension.EventHandlers<Excel.WorksheetDeactivatedEventArgs>
     fullName: OfficeExtension.EventHandlers<Excel.WorksheetDeactivatedEventArgs>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.EventHandlers:class'
+      - uid: 'office!OfficeExtension.EventHandlers:class'
         name: OfficeExtension.EventHandlers
         fullName: OfficeExtension.EventHandlers
       - name: <
@@ -731,7 +747,7 @@ references:
     name: OfficeExtension.EventHandlers<Excel.WorksheetDeletedEventArgs>
     fullName: OfficeExtension.EventHandlers<Excel.WorksheetDeletedEventArgs>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.EventHandlers:class'
+      - uid: 'office!OfficeExtension.EventHandlers:class'
         name: OfficeExtension.EventHandlers
         fullName: OfficeExtension.EventHandlers
       - name: <
@@ -745,7 +761,7 @@ references:
     name: OfficeExtension.EventHandlers<Excel.WorksheetFormatChangedEventArgs>
     fullName: OfficeExtension.EventHandlers<Excel.WorksheetFormatChangedEventArgs>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.EventHandlers:class'
+      - uid: 'office!OfficeExtension.EventHandlers:class'
         name: OfficeExtension.EventHandlers
         fullName: OfficeExtension.EventHandlers
       - name: <
@@ -755,11 +771,25 @@ references:
         fullName: Excel.WorksheetFormatChangedEventArgs
       - name: '>'
         fullName: '>'
+  - uid: 'excel!Excel.WorksheetCollection#onRowHiddenChanged~0:complex'
+    name: OfficeExtension.EventHandlers<Excel.WorksheetRowHiddenChangedEventArgs>
+    fullName: OfficeExtension.EventHandlers<Excel.WorksheetRowHiddenChangedEventArgs>
+    spec.typeScript:
+      - uid: 'office!OfficeExtension.EventHandlers:class'
+        name: OfficeExtension.EventHandlers
+        fullName: OfficeExtension.EventHandlers
+      - name: <
+        fullName: <
+      - uid: 'excel!Excel.WorksheetRowHiddenChangedEventArgs:interface'
+        name: Excel.WorksheetRowHiddenChangedEventArgs
+        fullName: Excel.WorksheetRowHiddenChangedEventArgs
+      - name: '>'
+        fullName: '>'
   - uid: 'excel!Excel.WorksheetCollection#onRowSorted~0:complex'
     name: OfficeExtension.EventHandlers<Excel.WorksheetRowSortedEventArgs>
     fullName: OfficeExtension.EventHandlers<Excel.WorksheetRowSortedEventArgs>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.EventHandlers:class'
+      - uid: 'office!OfficeExtension.EventHandlers:class'
         name: OfficeExtension.EventHandlers
         fullName: OfficeExtension.EventHandlers
       - name: <
@@ -773,7 +803,7 @@ references:
     name: OfficeExtension.EventHandlers<Excel.WorksheetSelectionChangedEventArgs>
     fullName: OfficeExtension.EventHandlers<Excel.WorksheetSelectionChangedEventArgs>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.EventHandlers:class'
+      - uid: 'office!OfficeExtension.EventHandlers:class'
         name: OfficeExtension.EventHandlers
         fullName: OfficeExtension.EventHandlers
       - name: <
@@ -787,7 +817,7 @@ references:
     name: OfficeExtension.EventHandlers<Excel.WorksheetSingleClickedEventArgs>
     fullName: OfficeExtension.EventHandlers<Excel.WorksheetSingleClickedEventArgs>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.EventHandlers:class'
+      - uid: 'office!OfficeExtension.EventHandlers:class'
         name: OfficeExtension.EventHandlers
         fullName: OfficeExtension.EventHandlers
       - name: <
