--- a/docs/docs-ref-autogen/onenote/onenote.yml
+++ b/docs/docs-ref-autogen/onenote/onenote.yml
@@ -185,7 +185,7 @@ items:
         - id: object
           description: 以前创建的 API 对象。 批处理将使用与传入的对象相同的请求上下文，这意味着应用于该对象的任何更改都将由 "context. sync （）" 选取。
           type:
-            - 'onenote!OfficeExtension.ClientObject:class'
+            - 'office!OfficeExtension.ClientObject:class'
         - id: batch
           description: 一个采用 RequestContext 的函数，返回一个承诺（通常只是 "context. sync （）" 的结果）。 解决承诺时，将释放在执行期间自动分配的任何已跟踪对象。
           type:
@@ -509,7 +509,7 @@ references:
         fullName: Promise
       - name: <T>
         fullName: <T>
-  - uid: 'onenote!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'onenote!OneNote.run~3:complex'
     name: '(context: OneNote.RequestContext) => Promise<T>'
@@ -540,7 +540,7 @@ references:
     name: 'OfficeExtension.ClientObject[]'
     fullName: 'OfficeExtension.ClientObject[]'
     spec.typeScript:
-      - uid: 'onenote!OfficeExtension.ClientObject:class'
+      - uid: 'office!OfficeExtension.ClientObject:class'
         name: OfficeExtension.ClientObject
         fullName: OfficeExtension.ClientObject
       - name: '[]'
