--- a/docs/docs-ref-autogen/visio/visio/visio.commentcollection.yml
+++ b/docs/docs-ref-autogen/visio/visio/visio.commentcollection.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'visio!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: visio!
     children:
       - 'visio!Visio.CommentCollection#context:member'
@@ -169,7 +169,7 @@ items:
         - id: option
           description: ''
           type:
-            - 'visio!OfficeExtension.LoadOption:interface'
+            - 'office!OfficeExtension.LoadOption:interface'
   - uid: 'visio!Visio.CommentCollection#toJSON:member(1)'
     summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始`Visio.CommentCollection`对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Visio.Interfaces.CommentCollectionData`<!-- -->），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。
     name: toJSON()
@@ -184,7 +184,7 @@ items:
           - 'visio!Visio.Interfaces.CommentCollectionData:interface'
         description: ''
 references:
-  - uid: 'visio!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'visio!Visio.RequestContext:class'
     name: RequestContext
@@ -192,7 +192,7 @@ references:
     name: OfficeExtension.ClientResult<number>
     fullName: OfficeExtension.ClientResult<number>
     spec.typeScript:
-      - uid: 'visio!OfficeExtension.ClientResult:class'
+      - uid: 'office!OfficeExtension.ClientResult:class'
         name: OfficeExtension.ClientResult
         fullName: OfficeExtension.ClientResult
       - name: <number>
@@ -222,7 +222,7 @@ references:
       - uid: 'visio!Visio.Interfaces.CollectionLoadOptions:interface'
         name: Visio.Interfaces.CollectionLoadOptions
         fullName: Visio.Interfaces.CollectionLoadOptions
-  - uid: 'visio!OfficeExtension.LoadOption:interface'
+  - uid: 'office!OfficeExtension.LoadOption:interface'
     name: OfficeExtension.LoadOption
   - uid: 'visio!Visio.Interfaces.CommentCollectionData:interface'
     name: Visio.Interfaces.CommentCollectionData
