--- a/docs/docs-ref-autogen/word/word/word.settingcollection.yml
+++ b/docs/docs-ref-autogen/word/word/word.settingcollection.yml
@@ -12,7 +12,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'word!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: word!
     children:
       - 'word!Word.SettingCollection#add:member(1)'
@@ -47,11 +47,11 @@ items:
         description: ''
       parameters:
         - id: key
-          description: 必填。 设置的密钥，它区分大小写。
+          description: 必需。 设置的密钥，它区分大小写。
           type:
             - string
         - id: value
-          description: 必填。 设置的值。
+          description: 必需。 设置的值。
           type:
             - any
   - uid: 'word!Word.SettingCollection#context:member'
@@ -299,7 +299,7 @@ items:
           ```
       parameters:
         - id: key
-          description: 必填。 标识 setting 对象的键。
+          description: 必需。 标识 setting 对象的键。
           type:
             - string
   - uid: 'word!Word.SettingCollection#items:member'
@@ -378,7 +378,7 @@ items:
         - id: option
           description: ''
           type:
-            - 'word!OfficeExtension.LoadOption:interface'
+            - 'office!OfficeExtension.LoadOption:interface'
   - uid: 'word!Word.SettingCollection#toJSON:member(1)'
     summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始`Word.SettingCollection`对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Word.Interfaces.SettingCollectionData`<!-- -->），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。
     isPreview: true
@@ -422,7 +422,7 @@ items:
           - 'word!Word.SettingCollection:class'
         description: ''
 references:
-  - uid: 'word!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'word!Word.Setting:class'
     name: Word.Setting
@@ -432,7 +432,7 @@ references:
     name: OfficeExtension.ClientResult<number>
     fullName: OfficeExtension.ClientResult<number>
     spec.typeScript:
-      - uid: 'word!OfficeExtension.ClientResult:class'
+      - uid: 'office!OfficeExtension.ClientResult:class'
         name: OfficeExtension.ClientResult
         fullName: OfficeExtension.ClientResult
       - name: <number>
@@ -460,7 +460,7 @@ references:
       - uid: 'word!Word.Interfaces.CollectionLoadOptions:interface'
         name: Word.Interfaces.CollectionLoadOptions
         fullName: Word.Interfaces.CollectionLoadOptions
-  - uid: 'word!OfficeExtension.LoadOption:interface'
+  - uid: 'office!OfficeExtension.LoadOption:interface'
     name: OfficeExtension.LoadOption
   - uid: 'word!Word.Interfaces.SettingCollectionData:interface'
     name: Word.Interfaces.SettingCollectionData
