--- a/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.conditionalformatupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.conditionalformatupdatedata.yml
@@ -209,7 +209,7 @@ items:
           - 'excel!Excel.Interfaces.PresetCriteriaConditionalFormatUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.ConditionalFormatUpdateData#priority:member'
     summary: |-
-      条件格式集合中当前存在此条件格式的优先级（或索引）。 更改此设置还会更改其他条件格式的优先级，以允许进行连续的优先级顺序。 使用负优先级从后开始。 优先级大于界限将获取并设置为最大值（如果为负，则为最小值）优先级。 另请注意，如果您更改优先级，则必须在该新的优先级位置重新获取该对象的新副本（如果要对其进行进一步的更改）。 只读。
+      条件格式集合中当前存在此条件格式的优先级（或索引）。 更改此设置还会更改其他条件格式的优先级，以允许进行连续的优先级顺序。 使用负优先级从后开始。 优先级大于界限将获取并设置为最大值（如果为负，则为最小值）优先级。 另请注意，如果您更改优先级，则必须在该新的优先级位置重新获取该对象的新副本（如果要对其进行进一步的更改）。
 
       \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: priority
@@ -269,7 +269,7 @@ items:
           - 'excel!Excel.Interfaces.TextConditionalFormatUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.ConditionalFormatUpdateData#topBottom:member'
     summary: |-
-      如果当前条件格式为 TopBottom 类型，则返回 Top/底端条件格式属性。 例如，设置前 10% 或前10个项目的格式。
+      如果当前条件格式为 TopBottom 类型，则返回 Top/底端条件格式属性。 例如，设置前10% 或前10个项目的格式。
 
       \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: topBottom
@@ -284,7 +284,7 @@ items:
           - 'excel!Excel.Interfaces.TopBottomConditionalFormatUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.ConditionalFormatUpdateData#topBottomOrNullObject:member'
     summary: |-
-      如果当前条件格式为 TopBottom 类型，则返回 Top/底端条件格式属性。 例如，设置前 10% 或前10个项目的格式。
+      如果当前条件格式为 TopBottom 类型，则返回 Top/底端条件格式属性。 例如，设置前10% 或前10个项目的格式。
 
       \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: topBottomOrNullObject
