--- a/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.pivottablestylecollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.pivottablestylecollectionloadoptions.yml
@@ -44,7 +44,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.PivotTableStyleCollectionLoadOptions#readOnly:member'
     summary: |-
-      对于集合中的每一项：指定此 PivotTableStyle 对象是否为只读。 只读。
+      对于集合中的每一项：指定此 PivotTableStyle 对象是否为只读。
 
       \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: readOnly
