commit translated contents

--- a/docs/docs-ref-autogen/excel/excel/excel.cultureinfo.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.cultureinfo.yml
@@ -4,15 +4,14 @@ items:
     summary: |-
       基于当前系统区域性设置提供信息。 这包括区域性名称、数字格式和其他区域性相关设置。
 
-      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
+      \[[API 集： ExcelApi 1.11](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.CultureInfo
     fullName: Excel.CultureInfo
     langs:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.CultureInfo#context:member'
@@ -25,7 +24,6 @@ items:
       - 'excel!Excel.CultureInfo#toJSON:member(1)'
   - uid: 'excel!Excel.CultureInfo#context:member'
     summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
-    isPreview: true
     name: context
     fullName: context
     langs:
@@ -54,7 +52,6 @@ items:
           - 'excel!Excel.DatetimeFormatInfo:class'
   - uid: 'excel!Excel.CultureInfo#load:member(1)'
     summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
-    isPreview: true
     name: load(options)
     fullName: load(options)
     langs:
@@ -73,7 +70,6 @@ items:
             - 'excel!Excel.Interfaces.CultureInfoLoadOptions:interface'
   - uid: 'excel!Excel.CultureInfo#load:member(2)'
     summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
-    isPreview: true
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -92,7 +88,6 @@ items:
             - 'string | string[]'
   - uid: 'excel!Excel.CultureInfo#load:member(3)'
     summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
-    isPreview: true
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -119,10 +114,9 @@ items:
                       }
   - uid: 'excel!Excel.CultureInfo#name:member'
     summary: |-
-      以 languagecode2/regioncode2 格式获取区域性名称（例如，"zh-tw-cn" or "en-us"）。 这取决于当前的系统设置。
+      以 languagecode2/regioncode2 格式获取区域性名称（例如，"zh-tw-cn" 或 "en-us"）。 这取决于当前的系统设置。
 
-      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
+      \[[API 集： ExcelApi 1.11](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
     fullName: name
     langs:
@@ -137,8 +131,7 @@ items:
     summary: |-
       定义适当的区域性格式，以显示数字。 这取决于当前的系统区域性设置。
 
-      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
+      \[[API 集： ExcelApi 1.11](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: numberFormat
     fullName: numberFormat
     langs:
@@ -151,7 +144,6 @@ items:
           - 'excel!Excel.NumberFormatInfo:class'
   - uid: 'excel!Excel.CultureInfo#toJSON:member(1)'
     summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。原始的 Excel CultureInfo 对象是一个 API 对象，但该`toJSON`方法返回一个简单的 JavaScript 对象（类型为`Excel.Interfaces.CultureInfoData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
-    isPreview: true
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -164,7 +156,7 @@ items:
           - 'excel!Excel.Interfaces.CultureInfoData:interface'
         description: ''
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
