commit bilingual contents

--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.chartseriesformatdata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.chartseriesformatdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartSeriesFormatData:interface'
-    summary: <span data-ttu-id="c9bea-101">描述通过调用返回的数据的接口`chartSeriesFormat.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="c9bea-101">An interface describing the data returned by calling `chartSeriesFormat.toJSON()`</span></span><!-- --><span data-ttu-id="c9bea-102">.</span><span class="sxs-lookup"><span data-stu-id="c9bea-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`chartSeriesFormat.toJSON()`<!-- -->.
     name: Excel.Interfaces.ChartSeriesFormatData
     fullName: Excel.Interfaces.ChartSeriesFormatData
     langs:
@@ -12,9 +12,9 @@ items:
       - 'excel!Excel.Interfaces.ChartSeriesFormatData#line:member'
   - uid: 'excel!Excel.Interfaces.ChartSeriesFormatData#line:member'
     summary: |-
-      <span data-ttu-id="c9bea-103">表示线条格式。</span><span class="sxs-lookup"><span data-stu-id="c9bea-103">Represents line formatting.</span></span> <span data-ttu-id="c9bea-104">只读。</span><span class="sxs-lookup"><span data-stu-id="c9bea-104">Read-only.</span></span>
+      表示线条格式。
 
-      <span data-ttu-id="c9bea-105">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c9bea-105">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: line
     fullName: line
     langs:
