--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.pivotfieldcollection.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.pivotfieldcollection.yml
@@ -2,16 +2,16 @@
 items:
   - uid: 'excel!Excel.PivotFieldCollection:class'
     summary: |-
-      <span data-ttu-id="83ec5-101">表示属于数据透视表的层次结构的所有透视字段的集合。</span><span class="sxs-lookup"><span data-stu-id="83ec5-101">Represents a collection of all the PivotFields that are part of a PivotTable's hierarchy.</span></span>
+      表示属于数据透视表的层次结构的所有透视字段的集合。
 
-      <span data-ttu-id="83ec5-102">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="83ec5-102">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.PivotFieldCollection
     fullName: Excel.PivotFieldCollection
     langs:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.PivotFieldCollection#context:member'
@@ -24,7 +24,7 @@ items:
       - 'excel!Excel.PivotFieldCollection#load:member(3)'
       - 'excel!Excel.PivotFieldCollection#toJSON:member(1)'
   - uid: 'excel!Excel.PivotFieldCollection#context:member'
-    summary: <span data-ttu-id="83ec5-103">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="83ec5-103">The request context associated with the object.</span></span> <span data-ttu-id="83ec5-104">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="83ec5-104">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -37,9 +37,9 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.PivotFieldCollection#getCount:member(1)'
     summary: |-
-      <span data-ttu-id="83ec5-105">获取集合中的数据透视字段数。</span><span class="sxs-lookup"><span data-stu-id="83ec5-105">Gets the number of pivot fields in the collection.</span></span>
+      获取集合中的数据透视字段数。
 
-      <span data-ttu-id="83ec5-106">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="83ec5-106">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getCount()
     fullName: getCount()
     langs:
@@ -53,9 +53,9 @@ items:
         description: ''
   - uid: 'excel!Excel.PivotFieldCollection#getItem:member(1)'
     summary: |-
-      <span data-ttu-id="83ec5-107">按其名称或 id 获取透视字段。</span><span class="sxs-lookup"><span data-stu-id="83ec5-107">Gets a PivotField by its name or id.</span></span>
+      按其名称或 id 获取透视字段。
 
-      <span data-ttu-id="83ec5-108">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="83ec5-108">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getItem(name)
     fullName: getItem(name)
     langs:
@@ -69,14 +69,14 @@ items:
         description: ''
       parameters:
         - id: name
-          description: <span data-ttu-id="83ec5-109">要检索的透视字段的名称。</span><span class="sxs-lookup"><span data-stu-id="83ec5-109">Name of the PivotField to be retrieved.</span></span>
+          description: 要检索的透视字段的名称。
           type:
             - string
   - uid: 'excel!Excel.PivotFieldCollection#getItemOrNullObject:member(1)'
     summary: |-
-      <span data-ttu-id="83ec5-110">按名称获取透视字段。</span><span class="sxs-lookup"><span data-stu-id="83ec5-110">Gets a PivotField by name.</span></span> <span data-ttu-id="83ec5-111">如果透视字段不存在，则将返回 null 对象。</span><span class="sxs-lookup"><span data-stu-id="83ec5-111">If the PivotField does not exist, will return a null object.</span></span>
+      按名称获取透视字段。 如果透视字段不存在，则将返回 null 对象。
 
-      <span data-ttu-id="83ec5-112">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="83ec5-112">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getItemOrNullObject(name)
     fullName: getItemOrNullObject(name)
     langs:
@@ -90,11 +90,11 @@ items:
         description: ''
       parameters:
         - id: name
-          description: <span data-ttu-id="83ec5-113">要检索的透视字段的名称。</span><span class="sxs-lookup"><span data-stu-id="83ec5-113">Name of the PivotField to be retrieved.</span></span>
+          description: 要检索的透视字段的名称。
           type:
             - string
   - uid: 'excel!Excel.PivotFieldCollection#items:member'
-    summary: <span data-ttu-id="83ec5-114">获取此集合中已加载的子项。</span><span class="sxs-lookup"><span data-stu-id="83ec5-114">Gets the loaded child items in this collection.</span></span>
+    summary: 获取此集合中已加载的子项。
     name: items
     fullName: items
     langs:
@@ -106,7 +106,7 @@ items:
         type:
           - 'excel!Excel.PivotFieldCollection#items~0:complex'
   - uid: 'excel!Excel.PivotFieldCollection#load:member(1)'
-    summary: <span data-ttu-id="83ec5-115">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="83ec5-115">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="83ec5-116">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="83ec5-116">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(options)
     fullName: load(options)
     langs:
@@ -120,11 +120,11 @@ items:
         description: ''
       parameters:
         - id: options
-          description: <span data-ttu-id="83ec5-117">提供要加载的对象的属性的选项。</span><span class="sxs-lookup"><span data-stu-id="83ec5-117">Provides options for which properties of the object to load.</span></span>
+          description: 提供要加载的对象的属性的选项。
           type:
             - 'excel!Excel.PivotFieldCollection#load~0:complex'
   - uid: 'excel!Excel.PivotFieldCollection#load:member(2)'
-    summary: <span data-ttu-id="83ec5-118">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="83ec5-118">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="83ec5-119">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="83ec5-119">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -138,11 +138,11 @@ items:
         description: ''
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="83ec5-120">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="83ec5-120">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.PivotFieldCollection#load:member(3)'
-    summary: <span data-ttu-id="83ec5-121">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="83ec5-121">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="83ec5-122">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="83ec5-122">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -156,11 +156,11 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '<span data-ttu-id="83ec5-123">`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="83ec5-123">`propertyNamesAndPaths.select` is a comma-delimited string that specifies the properties to load, and `propertyNamesAndPaths.expand` is a comma-delimited string that specifies the navigation properties to load.</span></span>'
+          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
           type:
-            - 'excel!OfficeExtension.LoadOption:interface'
+            - 'office!OfficeExtension.LoadOption:interface'
   - uid: 'excel!Excel.PivotFieldCollection#toJSON:member(1)'
-    summary: '<span data-ttu-id="83ec5-124">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="83ec5-124">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="83ec5-125">.</span><span class="sxs-lookup"><span data-stu-id="83ec5-125"></span></span> <span data-ttu-id="83ec5-126">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="83ec5-126"></span></span><!-- --><span data-ttu-id="83ec5-127">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始`Excel.PivotFieldCollection`对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.PivotFieldCollectionData`</span><span class="sxs-lookup"><span data-stu-id="83ec5-127">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original `Excel.PivotFieldCollection` object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.PivotFieldCollectionData`</span></span><!-- --><span data-ttu-id="83ec5-128">），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。</span><span class="sxs-lookup"><span data-stu-id="83ec5-128">) that contains an "items" array with shallow copies of any loaded properties from the collection''s items.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始`Excel.PivotFieldCollection`对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.PivotFieldCollectionData`<!-- -->），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -173,7 +173,7 @@ items:
           - 'excel!Excel.Interfaces.PivotFieldCollectionData:interface'
         description: ''
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
@@ -181,7 +181,7 @@ references:
     name: OfficeExtension.ClientResult<number>
     fullName: OfficeExtension.ClientResult<number>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.ClientResult:class'
+      - uid: 'office!OfficeExtension.ClientResult:class'
         name: OfficeExtension.ClientResult
         fullName: OfficeExtension.ClientResult
       - name: <number>
@@ -211,7 +211,7 @@ references:
       - uid: 'excel!Excel.Interfaces.CollectionLoadOptions:interface'
         name: Excel.Interfaces.CollectionLoadOptions
         fullName: Excel.Interfaces.CollectionLoadOptions
-  - uid: 'excel!OfficeExtension.LoadOption:interface'
+  - uid: 'office!OfficeExtension.LoadOption:interface'
     name: OfficeExtension.LoadOption
   - uid: 'excel!Excel.Interfaces.PivotFieldCollectionData:interface'
     name: Excel.Interfaces.PivotFieldCollectionData
