--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.chartupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.chartupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartUpdateData:interface'
-    summary: '<span data-ttu-id="c7897-101">一个接口，用于更新 Chart 对象上的数据，以供在`chart.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="c7897-101">An interface for updating data on the Chart object, for use in `chart.set({ ... })`</span></span><!-- --><span data-ttu-id="c7897-102">.</span><span class="sxs-lookup"><span data-stu-id="c7897-102"></span></span>'
+    summary: '一个接口，用于更新 Chart 对象上的数据，以供在`chart.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.ChartUpdateData
     fullName: Excel.Interfaces.ChartUpdateData
     langs:
@@ -23,9 +23,9 @@ items:
       - 'excel!Excel.Interfaces.ChartUpdateData#width:member'
   - uid: 'excel!Excel.Interfaces.ChartUpdateData#axes:member'
     summary: |-
-      <span data-ttu-id="c7897-103">表示图表坐标轴。</span><span class="sxs-lookup"><span data-stu-id="c7897-103">Represents chart axes.</span></span>
+      表示图表坐标轴。
 
-      <span data-ttu-id="c7897-104">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c7897-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: axes
     fullName: axes
     langs:
@@ -38,9 +38,9 @@ items:
           - 'excel!Excel.Interfaces.ChartAxesUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.ChartUpdateData#chartType:member'
     summary: |-
-      <span data-ttu-id="c7897-105">表示图表的类型。</span><span class="sxs-lookup"><span data-stu-id="c7897-105">Represents the type of the chart.</span></span> <span data-ttu-id="c7897-106">有关详细信息，请参阅 ChartType。</span><span class="sxs-lookup"><span data-stu-id="c7897-106">See Excel.ChartType for details.</span></span>
+      指定图表的类型。 有关详细信息，请参阅 ChartType。
 
-      <span data-ttu-id="c7897-107">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c7897-107">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: chartType
     fullName: chartType
     langs:
@@ -53,9 +53,9 @@ items:
           - 'excel!Excel.Interfaces.ChartUpdateData#chartType~0:complex'
   - uid: 'excel!Excel.Interfaces.ChartUpdateData#dataLabels:member'
     summary: |-
-      <span data-ttu-id="c7897-108">表示图表上的数据标签。</span><span class="sxs-lookup"><span data-stu-id="c7897-108">Represents the datalabels on the chart.</span></span>
+      表示图表上的数据标签。
 
-      <span data-ttu-id="c7897-109">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c7897-109">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: dataLabels
     fullName: dataLabels
     langs:
@@ -68,9 +68,9 @@ items:
           - 'excel!Excel.Interfaces.ChartDataLabelsUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.ChartUpdateData#format:member'
     summary: |-
-      <span data-ttu-id="c7897-110">封装图表区域的格式属性。</span><span class="sxs-lookup"><span data-stu-id="c7897-110">Encapsulates the format properties for the chart area.</span></span>
+      封装图表区域的格式属性。
 
-      <span data-ttu-id="c7897-111">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c7897-111">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
     fullName: format
     langs:
@@ -83,9 +83,9 @@ items:
           - 'excel!Excel.Interfaces.ChartAreaFormatUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.ChartUpdateData#height:member'
     summary: |-
-      <span data-ttu-id="c7897-112">表示 chart 对象的高度，以磅值表示。</span><span class="sxs-lookup"><span data-stu-id="c7897-112">Represents the height, in points, of the chart object.</span></span>
+      指定 chart 对象的高度（以磅为单位）。
 
-      <span data-ttu-id="c7897-113">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c7897-113">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: height
     fullName: height
     langs:
@@ -98,9 +98,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartUpdateData#left:member'
     summary: |-
-      <span data-ttu-id="c7897-114">从图表左侧到工作表原点的距离，以磅值表示。</span><span class="sxs-lookup"><span data-stu-id="c7897-114">The distance, in points, from the left side of the chart to the worksheet origin.</span></span>
+      从图表左侧到工作表原点的距离，以磅值表示。
 
-      <span data-ttu-id="c7897-115">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c7897-115">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: left
     fullName: left
     langs:
@@ -113,9 +113,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartUpdateData#legend:member'
     summary: |-
-      <span data-ttu-id="c7897-116">表示图表的图例。</span><span class="sxs-lookup"><span data-stu-id="c7897-116">Represents the legend for the chart.</span></span>
+      表示图表的图例。
 
-      <span data-ttu-id="c7897-117">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c7897-117">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: legend
     fullName: legend
     langs:
@@ -128,9 +128,9 @@ items:
           - 'excel!Excel.Interfaces.ChartLegendUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.ChartUpdateData#name:member'
     summary: |-
-      <span data-ttu-id="c7897-118">表示 chart 对象的名称。</span><span class="sxs-lookup"><span data-stu-id="c7897-118">Represents the name of a chart object.</span></span>
+      指定 chart 对象的名称。
 
-      <span data-ttu-id="c7897-119">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c7897-119">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
     fullName: name
     langs:
@@ -143,9 +143,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.ChartUpdateData#showAllFieldButtons:member'
     summary: |-
-      <span data-ttu-id="c7897-120">表示是否在数据透视图上显示所有字段按钮。</span><span class="sxs-lookup"><span data-stu-id="c7897-120">Represents whether to display all field buttons on a PivotChart.</span></span>
+      指定是否在数据透视图上显示所有字段按钮。
 
-      <span data-ttu-id="c7897-121">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c7897-121">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showAllFieldButtons
     fullName: showAllFieldButtons
     langs:
@@ -158,9 +158,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartUpdateData#title:member'
     summary: |-
-      <span data-ttu-id="c7897-122">表示指定图表的标题，包括标题的文本、可见性、位置和格式。</span><span class="sxs-lookup"><span data-stu-id="c7897-122">Represents the title of the specified chart, including the text, visibility, position, and formatting of the title.</span></span>
+      指定指定图表的标题，包括文本、可见性、位置和标题的格式。
 
-      <span data-ttu-id="c7897-123">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c7897-123">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: title
     fullName: title
     langs:
@@ -173,9 +173,9 @@ items:
           - 'excel!Excel.Interfaces.ChartTitleUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.ChartUpdateData#top:member'
     summary: |-
-      <span data-ttu-id="c7897-124">表示从对象左边界至第 1 行顶部（在工作表上）或图表区域顶部（在图表上）的距离，以磅值表示。</span><span class="sxs-lookup"><span data-stu-id="c7897-124">Represents the distance, in points, from the top edge of the object to the top of row 1 (on a worksheet) or the top of the chart area (on a chart).</span></span>
+      指定从对象的上边缘到工作表上的第1行顶部或图表上的图表区顶部的距离（以磅为单位）。
 
-      <span data-ttu-id="c7897-125">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c7897-125">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: top
     fullName: top
     langs:
@@ -188,9 +188,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartUpdateData#width:member'
     summary: |-
-      <span data-ttu-id="c7897-126">表示 chart 对象的宽度，以磅值表示。</span><span class="sxs-lookup"><span data-stu-id="c7897-126">Represents the width, in points, of the chart object.</span></span>
+      指定 chart 对象的宽度（以磅为单位）。
 
-      <span data-ttu-id="c7897-127">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c7897-127">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: width
     fullName: width
     langs:
