--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.replacecriteria.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.replacecriteria.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.ReplaceCriteria:interface'
     summary: |-
-      <span data-ttu-id="36e3e-101">表示要使用的替换条件。</span><span class="sxs-lookup"><span data-stu-id="36e3e-101">Represents the replace criteria to be used.</span></span>
+      表示要使用的替换条件。
 
-      <span data-ttu-id="36e3e-102">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="36e3e-102">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.ReplaceCriteria
     fullName: Excel.ReplaceCriteria
     langs:
@@ -16,9 +16,9 @@ items:
       - 'excel!Excel.ReplaceCriteria#matchCase:member'
   - uid: 'excel!Excel.ReplaceCriteria#completeMatch:member'
     summary: |-
-      <span data-ttu-id="36e3e-103">指定匹配必须是完整匹配还是部分匹配。</span><span class="sxs-lookup"><span data-stu-id="36e3e-103">Specifies whether the match needs to be complete or partial.</span></span> <span data-ttu-id="36e3e-104">默认值为 false（部分）。</span><span class="sxs-lookup"><span data-stu-id="36e3e-104">Default is false (partial).</span></span>
+      指定是否需要完成匹配或部分匹配。 完全匹配的单元格的全部内容。 部分匹配与单元格内容中的子字符串匹配（例如， `cat`部分匹配和`caterpillar``scatter`<!-- -->). 默认值为 false（部分）。
 
-      <span data-ttu-id="36e3e-105">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="36e3e-105">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: completeMatch
     fullName: completeMatch
     langs:
@@ -31,9 +31,9 @@ items:
           - boolean
   - uid: 'excel!Excel.ReplaceCriteria#matchCase:member'
     summary: |-
-      <span data-ttu-id="36e3e-106">指定匹配是否区分大小写。</span><span class="sxs-lookup"><span data-stu-id="36e3e-106">Specifies whether the match is case sensitive.</span></span> <span data-ttu-id="36e3e-107">默认值为 false（不区分大小写）。</span><span class="sxs-lookup"><span data-stu-id="36e3e-107">Default is false (insensitive).</span></span>
+      指定匹配是否区分大小写。 默认值为 false（不区分大小写）。
 
-      <span data-ttu-id="36e3e-108">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="36e3e-108">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: matchCase
     fullName: matchCase
     langs:
