--- a/docs/docs-ref-autogen/onenote/onenote.yml
+++ b/docs/docs-ref-autogen/onenote/onenote.yml
@@ -149,7 +149,7 @@ items:
       - 'onenote!OneNote.TableRow:class'
       - 'onenote!OneNote.TableRowCollection:class'
   - uid: 'onenote!OneNote.run:function(1)'
-    summary: '<span data-ttu-id="2e882-101">使用新的请求上下文执行对 OneNote 对象模型执行操作的批处理脚本。</span><span class="sxs-lookup"><span data-stu-id="2e882-101">Executes a batch script that performs actions on the OneNote object model, using a new request context.</span></span> <span data-ttu-id="2e882-102">解决承诺时，将释放在执行期间自动分配的任何已跟踪对象。</span><span class="sxs-lookup"><span data-stu-id="2e882-102">When the promise is resolved, any tracked objects that were automatically allocated during execution will be released.</span></span>'
+    summary: 使用新的请求上下文执行对 OneNote 对象模型执行操作的批处理脚本。 解决承诺时，将释放在执行期间自动分配的任何已跟踪对象。
     name: OneNote.run(batch)
     fullName: OneNote.run(batch)
     langs:
@@ -163,13 +163,13 @@ items:
         description: ''
       parameters:
         - id: batch
-          description: '<span data-ttu-id="2e882-103">一个采用 RequestContext 的函数，返回一个承诺（通常只是 "context. sync （）" 的结果）。</span><span class="sxs-lookup"><span data-stu-id="2e882-103">A function that takes in an OneNote.RequestContext and returns a promise (typically, just the result of "context.sync()").</span></span> <span data-ttu-id="2e882-104">Context 参数可促进对 OneNote 应用程序的请求。</span><span class="sxs-lookup"><span data-stu-id="2e882-104">The context parameter facilitates requests to the OneNote application.</span></span> <span data-ttu-id="2e882-105">由于 Office 加载项和 OneNote 应用程序在两个不同的进程中运行，因此请求上下文是从外接程序获取 OneNote 对象模型的访问权限所必需的。</span><span class="sxs-lookup"><span data-stu-id="2e882-105">Since the Office add-in and the OneNote application run in two different processes, the request context is required to get access to the OneNote object model from the add-in.</span></span>'
+          description: 一个采用 RequestContext 的函数，返回一个承诺（通常只是 "context. sync （）" 的结果）。 Context 参数可促进对 OneNote 应用程序的请求。 由于 Office 加载项和 OneNote 应用程序在两个不同的进程中运行，因此请求上下文是从外接程序获取 OneNote 对象模型的访问权限所必需的。
           type:
             - 'onenote!OneNote.run~1:complex'
       typeParameters:
         - id: T
   - uid: 'onenote!OneNote.run:function(2)'
-    summary: '<span data-ttu-id="2e882-106">使用以前创建的 API 对象的请求上下文，执行对 OneNote 对象模型执行操作的批处理脚本。</span><span class="sxs-lookup"><span data-stu-id="2e882-106">Executes a batch script that performs actions on the OneNote object model, using the request context of a previously-created API object.</span></span>'
+    summary: 使用以前创建的 API 对象的请求上下文，执行对 OneNote 对象模型执行操作的批处理脚本。
     name: 'OneNote.run(object, batch)'
     fullName: 'OneNote.run(object, batch)'
     langs:
@@ -183,17 +183,17 @@ items:
         description: ''
       parameters:
         - id: object
-          description: '<span data-ttu-id="2e882-107">以前创建的 API 对象。</span><span class="sxs-lookup"><span data-stu-id="2e882-107">A previously-created API object.</span></span> <span data-ttu-id="2e882-108">批处理将使用与传入的对象相同的请求上下文，这意味着应用于该对象的任何更改都将由 "context. sync （）" 选取。</span><span class="sxs-lookup"><span data-stu-id="2e882-108">The batch will use the same request context as the passed-in object, which means that any changes applied to the object will be picked up by "context.sync()".</span></span>'
+          description: 以前创建的 API 对象。 批处理将使用与传入的对象相同的请求上下文，这意味着应用于该对象的任何更改都将由 "context. sync （）" 选取。
           type:
-            - 'onenote!OfficeExtension.ClientObject:class'
+            - 'office!OfficeExtension.ClientObject:class'
         - id: batch
-          description: '<span data-ttu-id="2e882-109">一个采用 RequestContext 的函数，返回一个承诺（通常只是 "context. sync （）" 的结果）。</span><span class="sxs-lookup"><span data-stu-id="2e882-109">A function that takes in an OneNote.RequestContext and returns a promise (typically, just the result of "context.sync()").</span></span> <span data-ttu-id="2e882-110">解决承诺时，将释放在执行期间自动分配的任何已跟踪对象。</span><span class="sxs-lookup"><span data-stu-id="2e882-110">When the promise is resolved, any tracked objects that were automatically allocated during execution will be released.</span></span>'
+          description: 一个采用 RequestContext 的函数，返回一个承诺（通常只是 "context. sync （）" 的结果）。 解决承诺时，将释放在执行期间自动分配的任何已跟踪对象。
           type:
             - 'onenote!OneNote.run~3:complex'
       typeParameters:
         - id: T
   - uid: 'onenote!OneNote.run:function(3)'
-    summary: '<span data-ttu-id="2e882-111">使用以前创建的 API 对象的请求上下文，执行对 OneNote 对象模型执行操作的批处理脚本。</span><span class="sxs-lookup"><span data-stu-id="2e882-111">Executes a batch script that performs actions on the OneNote object model, using the request context of previously-created API objects.</span></span>'
+    summary: 使用以前创建的 API 对象的请求上下文，执行对 OneNote 对象模型执行操作的批处理脚本。
     name: 'OneNote.run(objects, batch)'
     fullName: 'OneNote.run(objects, batch)'
     langs:
@@ -211,7 +211,7 @@ items:
           type:
             - 'onenote!OneNote.run~5:complex'
         - id: batch
-          description: '<span data-ttu-id="2e882-112">一个采用 RequestContext 的函数，返回一个承诺（通常只是 "context. sync （）" 的结果）。</span><span class="sxs-lookup"><span data-stu-id="2e882-112">A function that takes in an OneNote.RequestContext and returns a promise (typically, just the result of "context.sync()").</span></span> <span data-ttu-id="2e882-113">解决承诺时，将释放在执行期间自动分配的任何已跟踪对象。</span><span class="sxs-lookup"><span data-stu-id="2e882-113">When the promise is resolved, any tracked objects that were automatically allocated during execution will be released.</span></span>'
+          description: 一个采用 RequestContext 的函数，返回一个承诺（通常只是 "context. sync （）" 的结果）。 解决承诺时，将释放在执行期间自动分配的任何已跟踪对象。
           type:
             - 'onenote!OneNote.run~6:complex'
       typeParameters:
@@ -509,7 +509,7 @@ references:
         fullName: Promise
       - name: <T>
         fullName: <T>
-  - uid: 'onenote!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'onenote!OneNote.run~3:complex'
     name: '(context: OneNote.RequestContext) => Promise<T>'
@@ -540,7 +540,7 @@ references:
     name: 'OfficeExtension.ClientObject[]'
     fullName: 'OfficeExtension.ClientObject[]'
     spec.typeScript:
-      - uid: 'onenote!OfficeExtension.ClientObject:class'
+      - uid: 'office!OfficeExtension.ClientObject:class'
         name: OfficeExtension.ClientObject
         fullName: OfficeExtension.ClientObject
       - name: '[]'
