--- a/docs/docs-ref-autogen/visio/visio/visio.comment.yml
+++ b/docs/docs-ref-autogen/visio/visio/visio.comment.yml
@@ -2,16 +2,16 @@
 items:
   - uid: 'visio!Visio.Comment:class'
     summary: |-
-      <span data-ttu-id="a9d11-101">表示 Comment 对象。</span><span class="sxs-lookup"><span data-stu-id="a9d11-101">Represents the Comment.</span></span>
+      表示 Comment 对象。
 
-      <span data-ttu-id="a9d11-102">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="a9d11-102">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: Visio.Comment
     fullName: Visio.Comment
     langs:
       - typeScript
     type: class
     extends:
-      - 'visio!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: visio!
     children:
       - 'visio!Visio.Comment#author:member'
@@ -26,9 +26,9 @@ items:
       - 'visio!Visio.Comment#toJSON:member(1)'
   - uid: 'visio!Visio.Comment#author:member'
     summary: |-
-      <span data-ttu-id="a9d11-103">指定注释的作者姓名的字符串。</span><span class="sxs-lookup"><span data-stu-id="a9d11-103">A string that specifies the name of the author of the comment.</span></span>
+      指定注释的作者姓名的字符串。
 
-      <span data-ttu-id="a9d11-104">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="a9d11-104">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: author
     fullName: author
     langs:
@@ -40,7 +40,7 @@ items:
         type:
           - string
   - uid: 'visio!Visio.Comment#context:member'
-    summary: <span data-ttu-id="a9d11-105">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="a9d11-105">The request context associated with the object.</span></span> <span data-ttu-id="a9d11-106">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="a9d11-106">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -53,9 +53,9 @@ items:
           - 'visio!Visio.RequestContext:class'
   - uid: 'visio!Visio.Comment#date:member'
     summary: |-
-      <span data-ttu-id="a9d11-107">指定注释创建日期的字符串。</span><span class="sxs-lookup"><span data-stu-id="a9d11-107">A string that specifies the date when the comment was created.</span></span>
+      指定注释创建日期的字符串。
 
-      <span data-ttu-id="a9d11-108">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="a9d11-108">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: date
     fullName: date
     langs:
@@ -67,17 +67,17 @@ items:
         type:
           - string
   - uid: 'visio!Visio.Comment#load:member(1)'
-    summary: <span data-ttu-id="a9d11-109">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="a9d11-109">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="a9d11-110">在读取属性之前，你必须调用“context.sync()”。</span><span class="sxs-lookup"><span data-stu-id="a9d11-110">You must call "context.sync()" before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性之前，你必须调用“context.sync()”。
     remarks: |-
-      <span data-ttu-id="a9d11-111">除了此签名之外，此方法还具有以下签名：</span><span class="sxs-lookup"><span data-stu-id="a9d11-111">In addition to this signature, this method has the following signatures:</span></span>
+      除了此签名之外，此方法还具有以下签名：
 
-      <span data-ttu-id="a9d11-112">`load(option?: string | string[]): Visio.Comment`-Where 选项是一个逗号分隔的字符串或一个字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="a9d11-112">`load(option?: string | string[]): Visio.Comment` - Where option is a comma-delimited string or an array of strings that specify the properties to load.</span></span>
+      `load(option?: string | string[]): Visio.Comment`-Where 选项是一个逗号分隔的字符串或一个字符串数组，用于指定要加载的属性。
 
-      <span data-ttu-id="a9d11-113">`load(option?: { select?: string; expand?: string; }): Visio.Comment`-Where 选项。选择是一个用逗号分隔的字符串，用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="a9d11-113">`load(option?: { select?: string; expand?: string; }): Visio.Comment` - Where option.select is a comma-delimited string that specifies the properties to load, and options.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>
+      `load(option?: { select?: string; expand?: string; }): Visio.Comment`-Where 选项。选择是一个用逗号分隔的字符串，用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串，用于指定要加载的导航属性。
 
-      <span data-ttu-id="a9d11-114">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Visio.Comment`-仅适用于集合类型。</span><span class="sxs-lookup"><span data-stu-id="a9d11-114">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Visio.Comment` - Only available on collection types.</span></span> <span data-ttu-id="a9d11-115">它类似于前面的签名。</span><span class="sxs-lookup"><span data-stu-id="a9d11-115">It is similar to the preceding signature.</span></span> <span data-ttu-id="a9d11-116">Top 指定结果中可包含的集合项的最大数量。</span><span class="sxs-lookup"><span data-stu-id="a9d11-116">Option.top specifies the maximum number of collection items that can be included in the result.</span></span> <span data-ttu-id="a9d11-117">选项。 skip 指定要跳过且不包含在结果中的项目数。</span><span class="sxs-lookup"><span data-stu-id="a9d11-117">Option.skip specifies the number of items that are to be skipped and not included in the result.</span></span> <span data-ttu-id="a9d11-118">如果指定了 top 选项，则在跳过指定数目的项目后将启动结果集。</span><span class="sxs-lookup"><span data-stu-id="a9d11-118">If option.top is specified, the result set will start after skipping the specified number of items.</span></span>
+      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Visio.Comment`-仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项，则在跳过指定数目的项目后将启动结果集。
 
-      #### <a name="examples"></a><span data-ttu-id="a9d11-119">示例</span><span class="sxs-lookup"><span data-stu-id="a9d11-119">Examples</span></span>
+      #### <a name="examples"></a>示例
 
       ```javascript
       Visio.run(session, function (ctx) {
@@ -119,7 +119,7 @@ items:
           type:
             - 'visio!Visio.Interfaces.CommentLoadOptions:interface'
   - uid: 'visio!Visio.Comment#load:member(2)'
-    summary: <span data-ttu-id="a9d11-120">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="a9d11-120">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="a9d11-121">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="a9d11-121">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -133,11 +133,11 @@ items:
         description: ''
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="a9d11-122">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="a9d11-122">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'visio!Visio.Comment#load:member(3)'
-    summary: <span data-ttu-id="a9d11-123">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="a9d11-123">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="a9d11-124">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="a9d11-124">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -151,13 +151,13 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '<span data-ttu-id="a9d11-125">其中，propertyNamesAndPaths 是用逗号分隔的字符串，用于指定要加载的属性和 propertyNamesAndPaths。扩展是一个用逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="a9d11-125">Where propertyNamesAndPaths.select is a comma-delimited string that specifies the properties to load, and propertyNamesAndPaths.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>'
+          description: 其中，propertyNamesAndPaths 是用逗号分隔的字符串，用于指定要加载的属性和 propertyNamesAndPaths。扩展是一个用逗号分隔的字符串，用于指定要加载的导航属性。
           type:
             - '{ select?: string; expand?: string; }'
   - uid: 'visio!Visio.Comment#set:member(1)'
-    summary: '<span data-ttu-id="a9d11-126">同时设置一个对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="a9d11-126">Sets multiple properties of an object at the same time.</span></span> <span data-ttu-id="a9d11-127">您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。</span><span class="sxs-lookup"><span data-stu-id="a9d11-127">You can pass either a plain object with the appropriate properties, or another API object of the same type.</span></span>'
+    summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
     remarks: |-
-      <span data-ttu-id="a9d11-128">此方法具有以下附加签名：</span><span class="sxs-lookup"><span data-stu-id="a9d11-128">This method has the following additional signature:</span></span>
+      此方法具有以下附加签名：
 
       `set(properties: Visio.Comment): void`
     name: 'set(properties, options)'
@@ -173,15 +173,15 @@ items:
         description: ''
       parameters:
         - id: properties
-          description: <span data-ttu-id="a9d11-129">一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="a9d11-129">A JavaScript object with properties that are structured isomorphically to the properties of the object on which the method is called.</span></span>
+          description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
           type:
             - 'visio!Visio.Interfaces.CommentUpdateData:interface'
         - id: options
-          description: <span data-ttu-id="a9d11-130">提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。</span><span class="sxs-lookup"><span data-stu-id="a9d11-130">Provides an option to suppress errors if the properties object tries to set any read-only properties.</span></span>
+          description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'visio!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'visio!Visio.Comment#set:member(2)'
-    summary: '<span data-ttu-id="a9d11-131">基于现有加载的对象同时设置该对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="a9d11-131">Sets multiple properties on the object at the same time, based on an existing loaded object.</span></span>'
+    summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
     fullName: set(properties)
     langs:
@@ -200,9 +200,9 @@ items:
             - 'visio!Visio.Comment:class'
   - uid: 'visio!Visio.Comment#text:member'
     summary: |-
-      <span data-ttu-id="a9d11-132">包含注释文本的字符串。</span><span class="sxs-lookup"><span data-stu-id="a9d11-132">A string that contains the comment text.</span></span>
+      包含注释文本的字符串。
 
-      <span data-ttu-id="a9d11-133">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="a9d11-133">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: text
     fullName: text
     langs:
@@ -214,7 +214,7 @@ items:
         type:
           - string
   - uid: 'visio!Visio.Comment#toJSON:member(1)'
-    summary: '<span data-ttu-id="a9d11-134">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="a9d11-134">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="a9d11-135">.</span><span class="sxs-lookup"><span data-stu-id="a9d11-135"></span></span> <span data-ttu-id="a9d11-136">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="a9d11-136"></span></span><!-- --><span data-ttu-id="a9d11-137">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始的 Visio Comment 对象是 API 对象，但该`toJSON`方法返回一个简单的 JavaScript 对象（类型为`Visio.Interfaces.CommentData`</span><span class="sxs-lookup"><span data-stu-id="a9d11-137">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original Visio.Comment object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Visio.Interfaces.CommentData`</span></span><!-- --><span data-ttu-id="a9d11-138">），其中包含原始对象中所有已加载的子属性的浅表副本。</span><span class="sxs-lookup"><span data-stu-id="a9d11-138">) that contains shallow copies of any loaded child properties from the original object.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始的 Visio Comment 对象是 API 对象，但该`toJSON`方法返回一个简单的 JavaScript 对象（类型为`Visio.Interfaces.CommentData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -227,7 +227,7 @@ items:
           - 'visio!Visio.Interfaces.CommentData:interface'
         description: ''
 references:
-  - uid: 'visio!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'visio!Visio.RequestContext:class'
     name: RequestContext
@@ -237,7 +237,7 @@ references:
     name: Visio.Interfaces.CommentLoadOptions
   - uid: 'visio!Visio.Interfaces.CommentUpdateData:interface'
     name: Interfaces.CommentUpdateData
-  - uid: 'visio!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'visio!Visio.Interfaces.CommentData:interface'
     name: Visio.Interfaces.CommentData
