--- a/docs/docs-ref-autogen/visio/visio/visio.commentcollection.yml
+++ b/docs/docs-ref-autogen/visio/visio/visio.commentcollection.yml
@@ -2,16 +2,16 @@
 items:
   - uid: 'visio!Visio.CommentCollection:class'
     summary: |-
-      <span data-ttu-id="98a25-101">表示给定形状的 CommentCollection 对象。</span><span class="sxs-lookup"><span data-stu-id="98a25-101">Represents the CommentCollection for a given Shape.</span></span>
+      表示给定形状的 CommentCollection 对象。
 
-      <span data-ttu-id="98a25-102">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="98a25-102">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: Visio.CommentCollection
     fullName: Visio.CommentCollection
     langs:
       - typeScript
     type: class
     extends:
-      - 'visio!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: visio!
     children:
       - 'visio!Visio.CommentCollection#context:member'
@@ -23,7 +23,7 @@ items:
       - 'visio!Visio.CommentCollection#load:member(3)'
       - 'visio!Visio.CommentCollection#toJSON:member(1)'
   - uid: 'visio!Visio.CommentCollection#context:member'
-    summary: <span data-ttu-id="98a25-103">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="98a25-103">The request context associated with the object.</span></span> <span data-ttu-id="98a25-104">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="98a25-104">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -36,9 +36,9 @@ items:
           - 'visio!Visio.RequestContext:class'
   - uid: 'visio!Visio.CommentCollection#getCount:member(1)'
     summary: |-
-      <span data-ttu-id="98a25-105">获取 Comment 对象的数量。</span><span class="sxs-lookup"><span data-stu-id="98a25-105">Gets the number of Comments.</span></span>
+      获取 Comment 对象的数量。
 
-      <span data-ttu-id="98a25-106">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="98a25-106">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: getCount()
     fullName: getCount()
     langs:
@@ -52,9 +52,9 @@ items:
         description: ''
   - uid: 'visio!Visio.CommentCollection#getItem:member(1)'
     summary: |-
-      <span data-ttu-id="98a25-107">按 Comment 对象的名称获取此对象。</span><span class="sxs-lookup"><span data-stu-id="98a25-107">Gets the Comment using its name.</span></span>
+      按 Comment 对象的名称获取此对象。
 
-      <span data-ttu-id="98a25-108">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="98a25-108">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: getItem(key)
     fullName: getItem(key)
     langs:
@@ -68,11 +68,11 @@ items:
         description: ''
       parameters:
         - id: key
-          description: <span data-ttu-id="98a25-109">键是要检索的 Comment 的名称。</span><span class="sxs-lookup"><span data-stu-id="98a25-109">Key is the name of the Comment to be retrieved.</span></span>
+          description: 键是要检索的 Comment 的名称。
           type:
             - string
   - uid: 'visio!Visio.CommentCollection#items:member'
-    summary: <span data-ttu-id="98a25-110">获取此集合中已加载的子项。</span><span class="sxs-lookup"><span data-stu-id="98a25-110">Gets the loaded child items in this collection.</span></span>
+    summary: 获取此集合中已加载的子项。
     name: items
     fullName: items
     langs:
@@ -84,17 +84,17 @@ items:
         type:
           - 'visio!Visio.CommentCollection#items~0:complex'
   - uid: 'visio!Visio.CommentCollection#load:member(1)'
-    summary: <span data-ttu-id="98a25-111">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="98a25-111">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="98a25-112">在读取属性之前，你必须调用“context.sync()”。</span><span class="sxs-lookup"><span data-stu-id="98a25-112">You must call "context.sync()" before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性之前，你必须调用“context.sync()”。
     remarks: |-
-      <span data-ttu-id="98a25-113">除了此签名之外，此方法还具有以下签名：</span><span class="sxs-lookup"><span data-stu-id="98a25-113">In addition to this signature, this method has the following signatures:</span></span>
+      除了此签名之外，此方法还具有以下签名：
 
-      <span data-ttu-id="98a25-114">`load(option?: string | string[]): Visio.CommentCollection`-Where 选项是一个逗号分隔的字符串或一个字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="98a25-114">`load(option?: string | string[]): Visio.CommentCollection` - Where option is a comma-delimited string or an array of strings that specify the properties to load.</span></span>
+      `load(option?: string | string[]): Visio.CommentCollection`-Where 选项是一个逗号分隔的字符串或一个字符串数组，用于指定要加载的属性。
 
-      <span data-ttu-id="98a25-115">`load(option?: { select?: string; expand?: string; }): Visio.CommentCollection`-Where 选项。选择是一个用逗号分隔的字符串，用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="98a25-115">`load(option?: { select?: string; expand?: string; }): Visio.CommentCollection` - Where option.select is a comma-delimited string that specifies the properties to load, and options.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>
+      `load(option?: { select?: string; expand?: string; }): Visio.CommentCollection`-Where 选项。选择是一个用逗号分隔的字符串，用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串，用于指定要加载的导航属性。
 
-      <span data-ttu-id="98a25-116">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Visio.CommentCollection`-仅适用于集合类型。</span><span class="sxs-lookup"><span data-stu-id="98a25-116">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Visio.CommentCollection` - Only available on collection types.</span></span> <span data-ttu-id="98a25-117">它类似于前面的签名。</span><span class="sxs-lookup"><span data-stu-id="98a25-117">It is similar to the preceding signature.</span></span> <span data-ttu-id="98a25-118">Top 指定结果中可包含的集合项的最大数量。</span><span class="sxs-lookup"><span data-stu-id="98a25-118">Option.top specifies the maximum number of collection items that can be included in the result.</span></span> <span data-ttu-id="98a25-119">选项。 skip 指定要跳过且不包含在结果中的项目数。</span><span class="sxs-lookup"><span data-stu-id="98a25-119">Option.skip specifies the number of items that are to be skipped and not included in the result.</span></span> <span data-ttu-id="98a25-120">如果指定了 top 选项，则在跳过指定数目的项目后将启动结果集。</span><span class="sxs-lookup"><span data-stu-id="98a25-120">If option.top is specified, the result set will start after skipping the specified number of items.</span></span>
+      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Visio.CommentCollection`-仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项，则在跳过指定数目的项目后将启动结果集。
 
-      #### <a name="examples"></a><span data-ttu-id="98a25-121">示例</span><span class="sxs-lookup"><span data-stu-id="98a25-121">Examples</span></span>
+      #### <a name="examples"></a>示例
 
       ```javascript
       Visio.run(session, function (ctx) {
@@ -136,7 +136,7 @@ items:
           type:
             - 'visio!Visio.CommentCollection#load~0:complex'
   - uid: 'visio!Visio.CommentCollection#load:member(2)'
-    summary: <span data-ttu-id="98a25-122">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="98a25-122">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="98a25-123">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="98a25-123">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -150,7 +150,7 @@ items:
         description: ''
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="98a25-124">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="98a25-124">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'visio!Visio.CommentCollection#load:member(3)'
@@ -169,9 +169,9 @@ items:
         - id: option
           description: ''
           type:
-            - 'visio!OfficeExtension.LoadOption:interface'
+            - 'office!OfficeExtension.LoadOption:interface'
   - uid: 'visio!Visio.CommentCollection#toJSON:member(1)'
-    summary: '<span data-ttu-id="98a25-125">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="98a25-125">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="98a25-126">.</span><span class="sxs-lookup"><span data-stu-id="98a25-126"></span></span> <span data-ttu-id="98a25-127">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="98a25-127"></span></span><!-- --><span data-ttu-id="98a25-128">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始`Visio.CommentCollection`对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Visio.Interfaces.CommentCollectionData`</span><span class="sxs-lookup"><span data-stu-id="98a25-128">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original `Visio.CommentCollection` object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Visio.Interfaces.CommentCollectionData`</span></span><!-- --><span data-ttu-id="98a25-129">），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。</span><span class="sxs-lookup"><span data-stu-id="98a25-129">) that contains an "items" array with shallow copies of any loaded properties from the collection''s items.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始`Visio.CommentCollection`对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Visio.Interfaces.CommentCollectionData`<!-- -->），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -184,7 +184,7 @@ items:
           - 'visio!Visio.Interfaces.CommentCollectionData:interface'
         description: ''
 references:
-  - uid: 'visio!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'visio!Visio.RequestContext:class'
     name: RequestContext
@@ -192,7 +192,7 @@ references:
     name: OfficeExtension.ClientResult<number>
     fullName: OfficeExtension.ClientResult<number>
     spec.typeScript:
-      - uid: 'visio!OfficeExtension.ClientResult:class'
+      - uid: 'office!OfficeExtension.ClientResult:class'
         name: OfficeExtension.ClientResult
         fullName: OfficeExtension.ClientResult
       - name: <number>
@@ -222,7 +222,7 @@ references:
       - uid: 'visio!Visio.Interfaces.CollectionLoadOptions:interface'
         name: Visio.Interfaces.CollectionLoadOptions
         fullName: Visio.Interfaces.CollectionLoadOptions
-  - uid: 'visio!OfficeExtension.LoadOption:interface'
+  - uid: 'office!OfficeExtension.LoadOption:interface'
     name: OfficeExtension.LoadOption
   - uid: 'visio!Visio.Interfaces.CommentCollectionData:interface'
     name: Visio.Interfaces.CommentCollectionData
